Update from October 12, 2015

--- a/50157-h/50157-h.htm
+++ b/50157-h/50157-h.htm
@@ -117,7 +117,7 @@
 
 <pre>
 
-The Project Gutenberg EBook of Billie Bradley and the School Mystery, by 
+﻿The Project Gutenberg EBook of Billie Bradley and the School Mystery, by 
 Janet D. Wheeler
 
 This eBook is for the use of anyone anywhere at no cost and with
